--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
   "name": "notion-cli",
-  "version": "1.0.2",
-  "description": "",
+  "version": "1.0.3",
+  "description": "Simple CLI tool for interacting with Notion's API",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "typecheck": "tsc",
     "build": "tsup",
-    "dev": "tsup --watch"
+    "dev": "tsup --watch",
+    "format": "prettier '**/*.{cjs,mjs,ts,tsx,md,json}' --ignore-path ../.gitignore --ignore-unknown --no-error-on-unmatched-pattern --write",
+    "format:check": "prettier '**/*.{cjs,mjs,ts,tsx,md,json}' --ignore-path ../.gitignore --ignore-unknown --no-error-on-unmatched-pattern --check",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "pnpm lint --fix",
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typecheck": "tsc"
   },
   "main": "dist/index.js",
   "bin": {
     "notion-cli": "./dist/index.js"
   },
   "type": "module",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "notion",
+    "cli",
+    "command-line",
+    "tool"
+  ],
+  "author": "(Curiously) Cory Sougstad <cory@curiouslycory.com> (https://curiouslycory.com)",
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@total-typescript/ts-reset": "^0.5.1",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
@@ -25,7 +36,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.1",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-isaacscript": "^3.12.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.1",
     "typescript": "^5.4.5"
   }
 }
