--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,28 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "allowJs": true,
+    "baseUrl": "./",
+    "checkJs": true,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "module": "Node16",
     "moduleResolution": "nodenext",
-    "allowJs": true,
-    "checkJs": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "sourceMap": true,
+    "noEmit": true,
     "outDir": "dist",
-    "rootDir": "src"
+    "removeComments": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "ES2020"
   },
-  "include": ["src/**/*.ts", "tsup.config.ts"],
+  "include": [
+    ".eslintrc.cjs",
+    "tsup.config.ts",
+    "reset.d.ts",
+    "prettier.config.mjs",
+    "src/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
