Code cleanup and organization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "tsup.config.ts",
     "reset.d.ts",
     "prettier.config.mjs",
-    "src/**/*.ts"
+    "src"
   ],
   "exclude": ["node_modules"]
 }
