--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "puppeteer": "^22.10.0",
     "tsup": "^8.1.0",
     "zod": "^3.23.8"
   },
