--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "tsup.config.ts",
     "reset.d.ts",
     "prettier.config.mjs",
-    "src"
+    "src/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
