--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format:check": "prettier '**/*.{cjs,mjs,ts,tsx,md,json}' --ignore-path ../.gitignore --ignore-unknown --no-error-on-unmatched-pattern --check",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "pnpm lint --fix",
-    "start": "node dist/index.js",
+    "start": "pnpm build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typecheck": "tsc"
   },
@@ -28,6 +28,7 @@
   ],
   "author": "(Curiously) Cory Sougstad <cory@curiouslycory.com> (https://curiouslycory.com)",
   "dependencies": {
+    "@distube/ytdl-core": "^4.15.8",
     "@notionhq/client": "^2.2.15",
     "@total-typescript/ts-reset": "^0.5.1",
     "chalk": "^5.3.0",
@@ -35,6 +36,7 @@
     "dotenv": "^16.4.5",
     "puppeteer": "^22.10.0",
     "tsup": "^8.1.0",
+    "ytdl-core": "npm:@distube/ytdl-core@^4.15.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
